@@ -193,9 +193,11 @@ char *fake = N_("Calculate the limit of a real-valued function at x0.  Tries to 
 char *fake = N_("Integration by midpoint rule");
 char *fake = N_("Attempt to calculate numerical derivative");
 char *fake = N_("Numerically compute the coefficients for a cosine Fourier series for a function on [0,L] up to the Nth coefficient.");
+char *fake = N_("Return a function which is the Fourier cosine series of f on [0,L] with coefficients up to N computed numerically");
 char *fake = N_("Numerically compute the coefficients for a Fourier series with half-period L up to the Nth coefficient.");
-char *fake = N_("Return a function which is the fourier series of f with half-period L with coefficients up to N computed numerically");
+char *fake = N_("Return a function which is the Fourier series of f with half-period L with coefficients up to N computed numerically");
 char *fake = N_("Numerically compute the coefficients for a sine Fourier series for a function on [0,L] up to the Nth coefficient.");
+char *fake = N_("Return a function which is the Fourier sine series of f on [0,L] with coefficients up to N computed numerically");
 char *fake = N_("Integration by rule set in NumericalIntegralFunction of f from a to b using NumericalIntegralSteps steps");
 char *fake = N_("Attempt to calculate numerical left derivative");
 char *fake = N_("Attempt to calculate the limit of f(step_fun(i)) as i goes from 1 to N");
