@@ -1,3 +1,13 @@
+Fri Jul 24 16:32:32 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* lib/calculus/fourier.gel: add NumericalFourierCosineSeriesFunction
+	  and NumericalFourierSineSeriesFunction and fixup some doc stringss
+
+	* src/eval.c, src/dict.c: build the subst_dict on first function
+	  evaluate.  This avoids subst lists for simple functions, plus
+	  it makes the global identifier no-substitution behaviour slightly
+	  more easy to see.
+
 Fri Jul 24 16:01:28 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/calc.c, src/compil.c: Correctly compile/decompile all the new
